--- a/annotation/style.css
+++ b/annotation/style.css
@@ -2,7 +2,7 @@ body {
 	font-size: 20px;
 	color: #ff00ff;
 	text-align: center;
-	background-color: #000000
+	background-color: #000000;
 }
 
 h1 {
