--- a/notuber/style.css
+++ b/notuber/style.css
@@ -1,15 +1,15 @@
 html {
 	height: 100%;
-	font-family: Helvetica, "Helvetica Neue", Arial, sans-serif;
+	font-family: monospace, sans-serif;
+	background-color: #F0F0F0;
 }
 
 body {
 	height: 100%;
-	margin: 0px;
-	padding: 0px;
+	text-align: center;
 }
 
 #map_canvas {
 	width: 100%;
-	height: 100%;
+	height: 80%;
 }
